update after deploy

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,9 +15,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/promotion/">Promotions</a>
         </li>
-        <li class="nav-item">
+        <!--<li class="nav-item">
           <a class="nav-link" href="/admin/">AdminTest</a>
-        </li>
+        </li>-->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Categories
@@ -65,3 +65,29 @@
 <body class="p-3 m-0 border-0 bd-example m-0 border-0">
   <router-outlet></router-outlet>
 </body>
+
+  <footer class="footer py-1 bg-success-subtle text-center">
+  <div class="container">
+    <a class="btn btn-link btn-floating btn-sm" href="#!" role="button"><i class="fa-brands fa-facebook"
+        style="color: #936969;"></i></a>
+
+    <a class="btn btn-link btn-floating btn-sm" href="#!" role="button"><i class="fab fa-twitter"
+        style="color: #936969;"></i>
+    </a>
+
+    <a class="btn btn-link btn-floating btn-sm" href="#!" role="button"><i class="fab fa-google"
+        style="color: #936969;"></i>
+    </a>
+
+    <a class="btn btn-link btn-floating btn-sm text-dark m-1" href="#!" role="button"><i class="fab fa-instagram"
+        style="color: #936969;"></i></a>
+
+
+    <a class="btn btn-link btn-floating btn-sm text-dark m-1" href="#!" role="button"><i class="fab fa-linkedin"
+        style="color: #936969;"></i></a>
+  </div>
+
+  <p class="text-body-secondary" class="fw-semibold">Mercadona-2023</p>
+
+</footer>
+
